k8/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityservice
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityservice
  template:
    metadata:
      labels:
        app: identityservice
    spec:
      containers:
        - name: identityservice
          image: pavk230/identityservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5100
---
apiVersion: v1
kind: Service
metadata:
  name: identityservice
  namespace: app
spec:
  selector:
    app: identityservice
  ports:
    - port: 80
      targetPort: 5100
