k8/salary.yaml
# salary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salaryservice
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salaryservice
  template:
    metadata:
      labels:
        app: salaryservice
    spec:
      containers:
        - name: salaryservice
          image: kithusshand/salaryservice
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: salaryservice
  namespace: app
spec:
  selector:
    app: salaryservice
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
