k8/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searchservice
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searchservice
  template:
    metadata:
      labels:
        app: searchservice
    spec:
      containers:
        - name: searchservice
          image: lavaniyah/searchservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: searchservice
  namespace: app
spec:
  selector:
    app: searchservice
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
