k8/stats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statsservice
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statsservice
  template:
    metadata:
      labels:
        app: statsservice
    spec:
      containers:
        - name: statsservice
          image: kithusshand/statsservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: statsservice
  namespace: app
spec:
  selector:
    app: statsservice
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
