k8/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: pavk230/voteservice:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: app
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
