k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identityservice
                port:
                  number: 80
          - path: /api/salary(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: salaryservice
                port:
                  number: 80
